--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-<html><head><title>C:\Users\Home OS\Desktop\вебсайт</title></head><body></body></html>
+<!DOCTYPE html>
+<html lang="pl">
+<head>
+    <meta charset="UTF-8">
+    <title>Usługi krawieckie LIUDMYLA</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<nav>
+    <ul>
+        <li><a href="index.html">Strona głowna</a></li>
+        <li><a href="cennik.html">Cennik</a></li>
+        <li><a href="kontakt.html">Kontakt</a></li>
+    </ul>
+</nav>
+<header>
+    <h1>Witamy w naszej pracowni krawieckiej</h1>
+    <p>Oferujemy profesjonalne usługi przeróbek i napraw odzieży w przystępnych cenach.</p>
+</header>
+<footer>
+    <p>&copy; 2025 Usługi Krawieckie LIUDMYLA</p>
+</footer>
+
+
+</body>
+</html>
