--- a/kontakt.html
+++ b/kontakt.html
@@ -18,7 +18,7 @@
 <h1>Kontakt</h1>
 <p>Adress: <a href="https://maps.app.goo.gl/MJR6B5rJNaVBV7X5A" target="_blank">ul. Kazimierza Wielkiego 3, Kraków</a> </p>
 <p> Telefon: 519-704-732</p>
-<p>email:alex.romanov12.06.2010@gmail.com</p>
+<p>ludmila.romanova09.01@gmail.com</p>
 </div>
 </body>
 </html>
