--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <nav>
     <ul>
         <li><a href="index.html">Strona głowna</a></li>
-        <li><a href="cennik.html">Cennik</a></li>
+        <li><a href="O_nas.html">O nas</a></li>
         <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
 </nav>
